# aastf

./: .gitignore  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new_adapter.yml  new_scenario.yml
.github/workflows/: ci.yml  publish.yml
.hypothesis/constants/: 004e722d2b39195a  006b559781a41f7f  01831d6f995783ed  03a0bc33c3be41ac  041b82baf95116f0  044aa4a97dd3204b  0570a7c52cd987f9  0628f2618034526e  068c9e16d4886008  0736e2d4acddd01a  07475514dc0bbadb  0799a57e5d15899f  07b8446a052edf99  07cbc26405169bc8  080fdca29399e92c  08e08434ed8a7ca0  09482feeaa124f43  098664242ff571e0  09ae28b390a241d0  0a174ab092bdf149  0b08334a64a0dc37  0b1a4bdfddf6460d  0b242a4a768117e8  0bbf713aaf267494  0c5c5e15615e3822  0cfa12dfbf9e9abb  0d65a410db824952  0d81dd8c57144454  0dd5cc18e770c117  0e7f8902539f63f3  0e9abef3c88eacd7  0ebb71f2da56c4c9  0f3acba2ec85a713  0f82305bbc6e3890  110a1d1d892c7388  11a4fb9bf042a054  122b0f64dfba73b4  127e8fa3efd6a7b8  135e09d70e0f48cd  13608e150f171b0e  (+565 more)
benchmark/: merge_results.py  run_claude_benchmark.py  run_single.py
benchmark/agents/: claude_code_agent.py  claude_langgraph.py
docs/research/: arXiv-paper-draft.md  benchmark-methodology.md  benchmark-results-v1.md  claude-benchmark-results.md  codex-benchmark-results.md  model-comparison.md
examples/: github-actions-agent-security.yml  langgraph_quickstart.py  test_claude_agent.py  test_codex_agent.py  test_mock_agent.py
scenarios/community/: template.yaml
src/aastf/: __init__.py  exceptions.py  runner.py  scoring.py
tests/: conftest.py
(+106 files in other folders)
