[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aastf"
version = "0.1.0"
description = "Agentic AI Security Testing Framework — OWASP ASI Top 10"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "loguru>=0.7",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "jinja2>=3.1",
    "anyio>=4.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=1.0", "langchain-core>=0.3"]
openai-agents = ["openai>=1.30"]
crewai = ["crewai>=0.28"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.4",
]
all = ["aastf[langgraph,openai-agents]"]

[project.scripts]
aastf = "aastf.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aastf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: typer requires Option/Argument in defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires real LLM API key",
    "slow: takes more than 10s",
]

[tool.ruff.lint.isort]
known-first-party = ["aastf"]
